--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-redis==5.4.0
 djangorestframework==3.16.0
 drf-yasg==1.21.10
 et_xmlfile==2.0.0
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 mysqlclient==2.2.7
